<?xml version="1.0"?>
<package>
  <name>data_logger_bag</name>
  <version>1.0.0</version>
  <description>This package uses ROS bag files to record and then parse into HDF5 format for data storage</description>

  <author email="vchu@gatech.edu">Vivian Chu</author>
  <maintainer email="vchu@gatech.edu">Vivian Chu</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/vchu/data_logger_bag</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
